fixCommandHandler